MorningProblems/n_sum-ThasankaK/test-cases/as-274-21-n_sum.py-test/Errors/036.txt
  File "/home/ubuntu/Host/MorningProblems/n_sum-ThasankaK/soln/n_sum.py", line 17
    print(' '.join(str(e) for e in emptylist)
         ^
SyntaxError: '(' was never closed
